Fri Aug 22 19:58:27 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: no need to require the "lib/rational.rb" any more.

Fri Aug 22 15:47:38 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/cgi.rb: use bytesize instead of size/length.

Fri Aug 22 14:28:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime): supported flags and precision for most
	  conversions.  [ruby-dev:35906]

	* lib/date/format.rb (Date#strftime): left-justifies %L and %N.
	  [ruby-dev:35909]

Fri Aug 22 14:04:04 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_transcode.rb: test_shift_jis:
	  fixed comment strings (see r18291)

Fri Aug 22 12:41:47 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_pid): use PIDT2NUM.

Fri Aug 22 11:36:31 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* dir.c (dir_enc_str_new): set US-ASCII to the path
	  when the path is 7bit string and encoding is ASCII compatible.

	* dir.c (push_glob): set file system encoding when argument encoding
	  is US-ASCII.

Fri Aug 22 11:30:38 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* dir.c (dir_enc_str_new): renamed from dir_enc_str.

	* dir.c (dir_read): use dir_enc_str_new.

	* dir.c (dir_each): ditto.

	* dir.c (push_pattern): ditto.

Fri Aug 22 11:29:10 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk: remove config.h dependency.

Fri Aug 22 10:52:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (gmtime_r): check if reentrant versions are available.

	* time.c (IF_HAVE_GMTIME_R, ASCTIME, GMTIME, LOCALTIME): use reentrant
	  versions if available.

Fri Aug 22 05:29:17 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (INT2NUM): just use a simple macro on LP64.
	  (UINT2NUM): ditto.

Fri Aug 22 05:10:07 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_file_open_generic): take filename as a VALUE.
	  (rb_file_open_internal): ditto.
	  (rb_io_open): ditto.
	  (rb_file_open): pass filename as a VALUE to rb_file_open_internal.