@@ -288,11 +288,15 @@ module Net
     # Disconnects from the server.
     def disconnect
       begin
-        # try to call SSL::SSLSocket#io.
-        @sock.io.shutdown
-      rescue NoMethodError
-        # @sock is not an SSL::SSLSocket.
-        @sock.shutdown
+        begin
+          # try to call SSL::SSLSocket#io.
+          @sock.io.shutdown
+        rescue NoMethodError
+          # @sock is not an SSL::SSLSocket.
+          @sock.shutdown
+        end
+      rescue Errno::ENOTCONN
+        # ignore `Errno::ENOTCONN: Socket is not connected' on some platforms.
       end
       @receiver_thread.join
       @sock.close
