@@ -130,9 +130,17 @@ module WEBrick
           addr = s.addr
           @logger.debug("close TCPSocket(#{addr[2]}, #{addr[1]})")
         end
-        s.shutdown
-        unless @config[:ShutdownSocketWithoutClose]
+        begin
+          s.shutdown
+        rescue Errno::ENOTCONN
+          # when `Errno::ENOTCONN: Socket is not connected' on some platforms,
+          # call #close instead of #shutdown.
+          # (ignore @config[:ShutdownSocketWithoutClose])
           s.close
+        else
+          unless @config[:ShutdownSocketWithoutClose]
+            s.close
+          end
         end
       }
       @listeners.clear
